--- a/apps/desktopgui/src/desktopgui/resources/Main.properties
+++ b/apps/desktopgui/src/desktopgui/resources/Main.properties
@@ -7,5 +7,5 @@ Application.vendor = I2P Developers
 Application.homepage = http://www.i2p2.de
 Application.description = An anonymous communication network.
 Application.vendorId = I2P
-Application.id = ${Application.name}
+Application.id = desktopgui
 Application.lookAndFeel = system
