--- a/apps/desktopgui/nbproject/project.properties
+++ b/apps/desktopgui/nbproject/project.properties
@@ -20,19 +20,22 @@ dist.dir=dist
 dist.jar=${dist.dir}/desktopgui.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.appframework.jar=lib/appframework.jar
 file.reference.i2p.jar=../../core/java/build/i2p.jar
 file.reference.router.jar=../../router/java/build/router.jar
+file.reference.swing-worker.jar=lib/swing-worker.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.router.jar}:\
-    ${file.reference.i2p.jar}:\
-    ${libs.swing-app-framework.classpath}
+    ${file.reference.appframework.jar}:\
+    ${file.reference.swing-worker.jar}:\
+    ${file.reference.i2p.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
-javac.source=1.5
-javac.target=1.5
+javac.source=1.6
+javac.target=1.6
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
@@ -49,6 +52,10 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jnlp.codebase.type=local
+jnlp.enabled=false
+jnlp.offline-allowed=false
+jnlp.signed=false
 main.class=desktopgui.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
