--- a/installer/resources/clients.config
+++ b/installer/resources/clients.config
@@ -1,5 +1,5 @@
 # fire up the web console
-clientApp.0.args=7657 127.0.0.1 ./webapps/
+clientApp.0.args=7657 ::1,127.0.0.1 ./webapps/
 clientApp.0.main=net.i2p.router.web.RouterConsoleRunner
 clientApp.0.name=webConsole
 clientApp.0.onBoot=true
@@ -8,7 +8,7 @@ clientApp.0.startOnLoad=true
 # SAM bridge
 clientApp.1.main=net.i2p.sam.SAMBridge
 clientApp.1.name=SAMBridge
-clientApp.1.args=sam.keys 127.0.0.1 7656 i2cp.tcp.host=localhost i2cp.tcp.port=7654
+clientApp.1.args=sam.keys 127.0.0.1 7656 i2cp.tcp.host=127.0.0.1 i2cp.tcp.port=7654
 clientApp.1.startOnLoad=false
 
 # poke the i2ptunnels defined in i2ptunnel.config
@@ -27,7 +27,7 @@ clientApp.3.startOnLoad=true
 # load a browser pointing at the web console whenever we start up
 clientApp.4.main=net.i2p.apps.systray.UrlLauncher
 clientApp.4.name=consoleBrowser
-clientApp.4.args=http://localhost:7657/index.jsp
+clientApp.4.args=http://127.0.0.1:7657/index.jsp
 clientApp.4.delay=5
 clientApp.4.startOnLoad=true
 
