Added distWithDesktopgui target, to build everything at once.
Monotone-Parent: 9666f5fdfc24a7fc2ca3a99a95ea5dfef5583b1b
Monotone-Revision: fc5ab185e9d9dccae35d3bff0f3978c10be37ce4

Monotone-Author: mathiasdm@mail.i2p
Monotone-Date: 2009-04-08T10:13:56
Monotone-Branch: i2p.i2p

--- a/build.xml
+++ b/build.xml
@@ -510,6 +510,8 @@
         </copy>
     </target>
     <target name="updaterWithDesktopgui" depends="prepupdateWithDesktopgui,updater" />
+    <target name="pkgWithDesktopgui" depends="distclean, updaterWithDesktopgui, installerWithDesktopgui, tarball" />
+    <target name="distWithDesktopgui" depends="pkgWithDesktopgui, javadoc" />
     <target name="distcleanWithDesktopgui" depends="distclean">
         <ant dir="apps/desktopgui" target="clean" />
     </target>
