Dropdown available for kb versus kB issues. Bandwidth calculation available from 2 directions (added from GB -> kbps). Layout manager switched for easier development.
Monotone-Parent: 9b73a50d356f49e9aadaae4cf86681b718c0d56b
Monotone-Revision: 244656d9b4df21f5ef256715835490d5541fac15

Monotone-Author: mathiasdm@mail.i2p
Monotone-Date: 2009-04-09T20:36:22
Monotone-Branch: i2p.i2p

--- a/apps/desktopgui/nbproject/project.properties
+++ b/apps/desktopgui/nbproject/project.properties
@@ -44,6 +44,7 @@ javac.test.classpath=\
 javadoc.additionalparam=
 javadoc.author=false
 javadoc.encoding=${source.encoding}
+javadoc.encoding.used=${javadoc.encoding}
 javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
@@ -53,6 +54,7 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 jnlp.codebase.type=local
+jnlp.codebase.url=file:/home/mathias/Documenten/Programmeren/i2p_monotone/repo/i2p.i2p/apps/desktopgui/dist/
 jnlp.enabled=false
 jnlp.offline-allowed=false
 jnlp.signed=false
