--- a/apps/desktopgui/src/gui/resources/SpeedSelector.properties
+++ b/apps/desktopgui/src/gui/resources/SpeedSelector.properties
@@ -1,7 +1,6 @@
 
-Form.title=I2P Configuration
+Form.title=I2P Speed Configuration
 nextButton.text=Next
-uploadLabel.text=What is your  maximum upload speed?
+uploadLabel.text=What is your maximum upload speed?
 downloadLabel.text=What is your maximum download speed?
-kbps1.text=kbit/second
-kbps2.text=kbit/second
+speedExplanation.text=Explanation about speeds...
