--- a/apps/desktopgui/src/gui/resources/SpeedSelector2.properties
+++ b/apps/desktopgui/src/gui/resources/SpeedSelector2.properties
@@ -1,6 +1,9 @@
 returnButton.text=Previous
-Form.title=I2P Configuration
+Form.title=I2P Speed Configuration
 questionLabel.text=Which of these descriptions fits you best?
 browseButton.text=Browsing: I want to use I2P to browse websites anonymously, no heavy usage.
 downloadButton.text=Downloading: I want to use I2P for downloads and filesharing, heavy usage.
 nextButton.text=Next
+browseButton.actionCommand=Browsing
+downloadButton.actionCommand=Downloading
+jLabel1.text=Text explaining ...
