--- a/apps/desktopgui/src/gui/resources/SpeedSelector3.properties
+++ b/apps/desktopgui/src/gui/resources/SpeedSelector3.properties
@@ -1,16 +1,17 @@
 Form.title=I2P Configuration
-jLabel1.text=The profile information your entered, indicates that these are your optimal settings:
 previousButton.text=Previous
 finishButton.text=Finish
 uploadLabel.text=Upload Speed:
 uploadBurstLabel.text=Burst Upload Speed:
 downloadLabel.text=Download Speed:
 downloadBurstLabel.text=Burst Download Speed:
-uploadUsageLabel.text=Monthy upload usage:
-downloadUsageLabel.text=Monthy Download Usage:
+uploadUsageLabel.text=GB
+downloadUsageLabel.text=GB
 uploadField.text=jTextField1
 uploadBurstField.text=jTextField2
-uploadMonth.text=jLabel8
-downloadMonth.text=jLabel9
 downloadField.text=jTextField4
 downloadBurstField.text=jTextField5
+uploadMonth.text=jTextField1
+downloadMonth.text=jTextField2
+settingsInfo.text=The profile information your entered, indicates that these are your optimal settings:
+explanation.text=Text explaining ...
