--- a/build.xml
+++ b/build.xml
@@ -488,7 +488,7 @@
         <echo message="Findbugs output stored in findbugs.xml" />
     </target>
     <target name="buildWithDesktopgui" depends="buildrouter">
-        <ant dir="apps/desktopgui" target="jar" />
+        <ant dir="apps/desktopgui" target="build_jar" />
     </target>
     <target name="preppkgWithDesktopgui" depends="buildWithDesktopgui,preppkg">
         <copy file="apps/desktopgui/dist/desktopgui.jar" todir="pkg-temp/lib/" />
@@ -513,6 +513,6 @@
     <target name="pkgWithDesktopgui" depends="distclean, updaterWithDesktopgui, installerWithDesktopgui, tarball" />
     <target name="distWithDesktopgui" depends="pkgWithDesktopgui, javadoc" />
     <target name="distcleanWithDesktopgui" depends="distclean">
-        <ant dir="apps/desktopgui" target="clean" />
+        <ant dir="apps/desktopgui" target="build_clean" />
     </target>
 </project>
