Added text explaining the different speeds. Tray icon colours indicates active peers (and tooltip indicates reachability). The menu now uses Swing instead of Awt, so it looks a lot better.
Monotone-Parent: 7b157bec894f59cad3200424b476342fa9ad3372
Monotone-Revision: 7298248358ee266b5c8c7383cd1ef06e343fe42a

Monotone-Author: mathiasdm@mail.i2p
Monotone-Date: 2009-04-11T13:35:22
Monotone-Branch: i2p.i2p

--- a/apps/desktopgui/src/gui/resources/SpeedSelector3.properties
+++ b/apps/desktopgui/src/gui/resources/SpeedSelector3.properties
@@ -14,4 +14,4 @@ downloadBurstField.text=jTextField5
 uploadMonth.text=jTextField1
 downloadMonth.text=jTextField2
 settingsInfo.text=The profile information your entered, indicates that these are your optimal settings:
-explanation.text=Text explaining ...
+explanation.text=<html>We give a suggested upload and download speed. If your provider imposes a monthly bandwidth limit (usually given in <b>gigabyte (GB)</b>), please enter a value lower than that limit. If you run I2P only 50% of the time, you can double the bandwidth limit to use the same amount as when you are online 100% of the time.</html>
