--- a/apps/desktopgui/src/gui/resources/SpeedSelector2.properties
+++ b/apps/desktopgui/src/gui/resources/SpeedSelector2.properties
@@ -6,4 +6,4 @@ downloadButton.text=Downloading: I want to use I2P for downloads and filesharing
 nextButton.text=Next
 browseButton.actionCommand=Browsing
 downloadButton.actionCommand=Downloading
-jLabel1.text=Text explaining ...
+jLabel1.text=<html>I2P can be used for many different purposes. Here, we present two possible descriptions. If you use a lot of bandwidth in I2P (for example using downloading), please check the <b>downloading</b> option. If your bandwidth usage is limited, please check the <b>browsing</b> option.</html>
