* Bugfix on tray icon updating     * Some more work on the general configuration menu       (currently not added to the tray icon menu yet, needs more work)     * Tweaked the desktopgui logo
Monotone-Parent: f2f30046d275e7b25b5279676cf7213ec23d8303
Monotone-Revision: 08bf1eb3101ffee3ba28d8036328c3571606e8cc

Monotone-Author: mathiasdm@mail.i2p
Monotone-Date: 2009-04-13T17:27:35
Monotone-Branch: i2p.i2p

--- a/apps/desktopgui/src/gui/resources/GeneralConfiguration.properties
+++ b/apps/desktopgui/src/gui/resources/GeneralConfiguration.properties
@@ -24,3 +24,6 @@ jRadioButton3.text=Download, verify and restart
 jToggleButton1.text=Check for updates now
 jToggleButton2.text=Update available: update now
 jToggleButton3.text=Advanced update configuration
+jLabel9.text=Tunnel explanation
+jLabel10.text=Client tunnels:
+jLabel11.text=Server tunnels:
