--- a/apps/susimail/build.xml
+++ b/apps/susimail/build.xml
@@ -5,11 +5,13 @@
     <target name="builddep">
         <ant dir="../jetty/" target="build" />
     </target>
+    <property name="javac.compilerargs" value="" />
     <target name="compile">
         <javac 
             srcdir="./src/src"
             debug="true" deprecation="off" source="1.5" target="1.5" 
             destdir="./src/WEB-INF/classes">
+            <compilerarg line="${javac.compilerargs}" />
             <classpath>
                 <pathelement location="../jetty/jettylib/javax.servlet.jar" />
                 <pathelement location="../jetty/jettylib/org.mortbay.jetty.jar" />
