--- a/build.xml
+++ b/build.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="ISO-8859-1"?>
 <project basedir="." default="all" name="i2p">
    
+    <!-- Things you might want to change -->
+    <!-- This keeps gcj a lot quieter -->
+    <!--
+        <property name="javac.compilerargs" value="-warn:-unchecked,raw,unused,serial" />
+    -->
+
+    <!-- You probably don't want to change anything from here down -->
     <target name="all" >
         <echo message="Useful targets: " />
         <echo message="  pkg:       distclean then package everything up (installer, clean tarball, update tarball)" />
