--- a/apps/susidns/src/build.xml
+++ b/apps/susidns/src/build.xml
@@ -37,7 +37,7 @@
         <echo message="Ignore any warning about /WEB-INF/web.xml not found" />
         <java classname="org.apache.jasper.JspC" fork="true" classpathref="cp">
             <arg value="-d" />
-            <arg value="WEB-INF/classes" />
+            <arg value="${tmp}" />
             <arg value="-v" />
             <arg value="-p" />
             <arg value="i2p.susi.dns.jsp" />
@@ -47,7 +47,7 @@
             <arg value="./jsp" />
         </java>
         <javac debug="true" deprecation="on" source="1.5" target="1.5" 
-               destdir="${bin}" srcdir="./WEB-INF/classes" includes="**/*.java" classpathref="cp">
+               destdir="${bin}" srcdir="${tmp}" includes="**/*.java" classpathref="cp">
 		<compilerarg line="${javac.compilerargs}" />
          </javac>
         <copy file="WEB-INF/web-template.xml" tofile="WEB-INF/web-out.xml" />
@@ -85,6 +85,7 @@
         <fileset dir="WEB-INF" includes="web-fragment.xml, web-out.xml" />
       </delete>
       <delete dir="${bin}" />
+      <delete dir="${tmp}" />
     </target>
     <target name="distclean" depends="clean" />
 </project>
