apps/sam/java/build.xml reflects dependancy upon streaming.jar
Monotone-Parent: 1d2cdd2258d1e089151721de912187b01926c9fb
Monotone-Revision: 13834d1740be6d579deb1eb4bcecc49e68178cfb

Monotone-Author: mkvore-commit@mail.i2p
Monotone-Date: 2009-05-05T09:28:10
Monotone-Branch: i2p.i2p

--- a/apps/sam/java/build.xml
+++ b/apps/sam/java/build.xml
@@ -31,7 +31,7 @@
             srcdir="./src" 
             debug="true" deprecation="on" source="1.5" target="1.5" 
             destdir="./build/obj" 
-            classpath="../../../core/java/build/i2p.jar:../../ministreaming/java/build/mstreaming.jar" >
+            classpath="../../../core/java/build/i2p.jar:../../ministreaming/java/build/mstreaming.jar:../../streaming/java/build/streaming.jar" >
             <compilerarg line="${javac.compilerargs}" />
         </javac>
     </target>
@@ -40,7 +40,7 @@
             srcdir="./test" 
             debug="true" deprecation="on" source="1.5" target="1.5" 
             destdir="./build/obj" 
-            classpath="../../../core/java/build/i2p.jar:../../ministreaming/java/build/mstreaming.jar" >
+            classpath="../../../core/java/build/i2p.jar:../../ministreaming/java/build/mstreaming.jar:../../streaming/java/build/streaming.jar" >
             <compilerarg line="${javac.compilerargs}" />
         </javac>
     </target>
