* Improvements to popup menu rightclick action     * Added general configuration options (still not available by default)     * General fixes     * Added ant build options (irc says eche|on would like that ;))
Monotone-Parent: 6c10fcb35bbacab1d3add8997d49bc5575f15a54
Monotone-Revision: 622324a8f0f863b7b4eaaa26385228a65c71edf0

Monotone-Author: mathiasdm@mail.i2p
Monotone-Date: 2009-05-06T16:17:58
Monotone-Branch: i2p.i2p

--- a/apps/desktopgui/src/gui/resources/GeneralConfiguration.properties
+++ b/apps/desktopgui/src/gui/resources/GeneralConfiguration.properties
@@ -1,19 +1,7 @@
-
-jPanel2.TabConstraints.tabTitle=Speed
-jPanel3.TabConstraints.tabTitle=Updates
-jPanel4.TabConstraints.tabTitle=Tunnels/Services
-jPanel5.TabConstraints.tabTitle=Network
-jPanel6.TabConstraints.tabTitle=Advanced
 cancel.text=Cancel
 ok.text=OK
-jLabel1.text=Upload speed:
-jLabel2.text=Download speed:
-jTextField1.text=jTextField1
-jTextField2.text=jTextField2
 jLabel3.text=Monthly usage:
 jLabel4.text=Monthly usage:
-jTextField3.text=jTextField3
-jTextField4.text=jTextField4
 jLabel5.text=GB
 jLabel6.text=GB
 jLabel7.text=Explanation ...
@@ -27,3 +15,15 @@ jToggleButton3.text=Advanced update configuration
 jLabel9.text=Tunnel explanation
 jLabel10.text=Client tunnels:
 jLabel11.text=Server tunnels:
+Form.title=General Configuration
+speedPanel.TabConstraints.tabTitle=Speed
+updatesPanel.TabConstraints.tabTitle=Updates
+tunnelPanel.TabConstraints.tabTitle=Tunnels/Services
+networkPanel.TabConstraints.tabTitle=Network
+advancedPanel.TabConstraints.tabTitle=Advanced
+uploadSpeedLabel.text=Upload speed:
+downloadSpeedLabel.text=Download speed:
+uploadspeed.text=jTextField1
+downloadspeed.text=jTextField2
+uploadgb.text=jTextField3
+downloadgb.text=jTextField4
