--- a/apps/desktopgui/src/gui/resources/SpeedSelector3.properties
+++ b/apps/desktopgui/src/gui/resources/SpeedSelector3.properties
@@ -5,8 +5,8 @@ uploadLabel.text=Upload Speed:
 uploadBurstLabel.text=Burst Upload Speed:
 downloadLabel.text=Download Speed:
 downloadBurstLabel.text=Burst Download Speed:
-uploadUsageLabel.text=Monthly usage:
-downloadUsageLabel.text=Monthly usage:
+uploadUsageLabel.text=GB
+downloadUsageLabel.text=GB
 uploadField.text=jTextField1
 uploadBurstField.text=jTextField2
 downloadField.text=jTextField4
