--- a/apps/desktopgui/nbproject/project.properties
+++ b/apps/desktopgui/nbproject/project.properties
@@ -58,7 +58,7 @@ jnlp.codebase.url=file:/home/mathias/Documenten/Programmeren/i2p_monotone/repo/i
 jnlp.enabled=false
 jnlp.offline-allowed=false
 jnlp.signed=false
-main.class=desktopgui.Main
+main.class=net.i2p.desktopgui.desktopgui.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 platform.active=default_platform
