stop build on jsp compile errors
Monotone-Parent: d9c92d001e7a627fe13481a6a3bf51c4bb409df7
Monotone-Revision: 5e4ea679da19b40f6a61ada58987dea2a2ab58a0

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2009-05-16T00:52:21

--- a/apps/routerconsole/java/build.xml
+++ b/apps/routerconsole/java/build.xml
@@ -86,7 +86,7 @@
         <mkdir dir="../jsp/WEB-INF/" />
         <mkdir dir="../jsp/WEB-INF/classes" />
         <!-- there are various jspc ant tasks, but they all seem a bit flakey -->
-        <java classname="org.apache.jasper.JspC" fork="true">
+        <java classname="org.apache.jasper.JspC" fork="true" failonerror="true">
             <classpath>
                 <pathelement location="../../jetty/jettylib/jasper-compiler.jar" />
                 <pathelement location="../../jetty/jettylib/jasper-runtime.jar" />
