* General configuration enabled by default     * General configuration speed tab works completely
Monotone-Parent: 31ab45aaed880aa1d8295541b813adb312582f17
Monotone-Revision: e9c81b8ce06374554965eacae3ae64df995b26df

Monotone-Author: mathiasdm@mail.i2p
Monotone-Date: 2009-05-20T19:58:55
Monotone-Branch: i2p.i2p

--- a/apps/desktopgui/src/net/i2p/desktopgui/gui/resources/GeneralConfiguration.properties
+++ b/apps/desktopgui/src/net/i2p/desktopgui/gui/resources/GeneralConfiguration.properties
@@ -1,10 +1,5 @@
 cancel.text=Cancel
 ok.text=OK
-jLabel3.text=Monthly usage:
-jLabel4.text=Monthly usage:
-jLabel5.text=GB
-jLabel6.text=GB
-jLabel7.text=Explanation ...
 Form.title=General Configuration
 speedPanel.TabConstraints.tabTitle=Speed
 updatesPanel.TabConstraints.tabTitle=Updates
@@ -27,3 +22,8 @@ advancedUpdateConfig.text=Advanced update configuration
 clientTunnelLabel.text=Client tunnels:
 serverTunnelLabel.text=Server tunnels:
 tunnelsExplanation.text=Tunnel explanation
+uploadUsageLabel.text=Monthly usage:
+downloadUsageLabel.text=Monthly usage:
+gbUploadLabel.text=GB
+gbDownloadLabel.text=GB
+uploadDownloadExplanation.text=Explanation ...
