increase eepsite hops to 3+0 for new installs
Monotone-Parent: 45a5cb45705c0778fbbb43f16ca2cdf029e90eef
Monotone-Revision: 97efbce521018c26030e229181a53adce5774ab6

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2009-05-21T13:19:34

--- a/installer/resources/i2ptunnel.config
+++ b/installer/resources/i2ptunnel.config
@@ -55,6 +55,10 @@ tunnel.3.i2cpHost=127.0.0.1
 tunnel.3.i2cpPort=7654
 tunnel.3.option.inbound.nickname=eepsite
 tunnel.3.option.outbound.nickname=eepsite
+tunnel.3.option.inbound.length=3
+tunnel.3.option.inbound.lengthVariance=0
+tunnel.3.option.outbound.length=3
+tunnel.3.option.outbound.lengthVariance=0
 tunnel.3.startOnLoad=false
 
 # postman's SMTP server - see www.postman.i2p
