* desktopgui:       - Updating works in general config       - Switched to Swingworker threads for improved responsiveness       - version increase to 0.1.3
Monotone-Parent: 97debae941408086b9389ad1bbbb85fc52676901
Monotone-Revision: 95763d9df324eb8754552cf7531e8fd5e2e9ec3c

Monotone-Author: mathiasdm@mail.i2p
Monotone-Date: 2009-05-21T22:32:34
Monotone-Branch: i2p.i2p

--- a/apps/desktopgui/build.xml
+++ b/apps/desktopgui/build.xml
@@ -76,10 +76,12 @@
     <property name="build_dist" location="dist"/>
     <property name="build_lib" location="lib"/>
     <property name="build_i2pref" location="../../build"/>
+    <property name="build_routerconsole" location="../routerconsole/java/build/"/>
 	
     <path id="build_classpath">
         <fileset dir="${build_lib}" includes="**/*.jar"/>
         <fileset dir="${build_i2pref}" includes="**/*.jar"/>
+        <fileset dir="${build_routerconsole}" includes="**/*.jar"/>
     </path>
     <target name="build_init">
         <!-- Create the time stamp -->
