--- a/apps/desktopgui/nbproject/project.properties
+++ b/apps/desktopgui/nbproject/project.properties
@@ -23,6 +23,7 @@ excludes=
 file.reference.appframework.jar=lib/appframework.jar
 file.reference.i2p.jar=../../core/java/build/i2p.jar
 file.reference.router.jar=../../router/java/build/router.jar
+file.reference.routerconsole.jar=../routerconsole/java/build/routerconsole.jar
 file.reference.swing-worker.jar=lib/swing-worker.jar
 includes=**
 jar.compress=false
@@ -30,7 +31,8 @@ javac.classpath=\
     ${file.reference.router.jar}:\
     ${file.reference.appframework.jar}:\
     ${file.reference.swing-worker.jar}:\
-    ${file.reference.i2p.jar}
+    ${file.reference.i2p.jar}:\
+    ${file.reference.routerconsole.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
