move icons/ to docs/
Monotone-Parent: 326752c8c7ce00bc6787fe25e315448ce7124aff
Monotone-Revision: c53f46996330350ff501d5855b60e6693becf464

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2009-05-22T13:23:52

--- a/build.xml
+++ b/build.xml
@@ -322,7 +322,7 @@
         </copy>
         <copy file="installer/resources/geoip.txt" todir="pkg-temp/geoip/" />
         <copy file="installer/resources/countries.txt" todir="pkg-temp/geoip/" />
-        <copy todir="pkg-temp/icons/flags" >
+        <copy todir="pkg-temp/docs/icons/flags" >
           <fileset dir="installer/resources/icons/flags" />
         </copy>
     </target>
@@ -339,7 +339,7 @@
         </copy>
         <copy file="installer/resources/geoip.txt" todir="pkg-temp/geoip/" />
         <copy file="installer/resources/countries.txt" todir="pkg-temp/geoip/" />
-        <copy todir="pkg-temp/icons/flags" >
+        <copy todir="pkg-temp/docs/icons/flags" >
           <fileset dir="installer/resources/icons/flags" />
         </copy>
         <zip destfile="docs.zip" basedir="pkg-temp" />
@@ -401,7 +401,7 @@
     <target name="prepgeoupdate" depends="prepupdate">
         <copy file="installer/resources/geoip.txt" todir="pkg-temp/geoip/" />
         <copy file="installer/resources/countries.txt" todir="pkg-temp/geoip/" />
-        <copy todir="pkg-temp/icons/flags" >
+        <copy todir="pkg-temp/docs/icons/flags" >
           <fileset dir="installer/resources/icons/flags" />
         </copy>
     </target>
