Rename install*txt files
Monotone-Parent: 480eeee0c1f9ffe51ba327625a4fd52d5a866d62
Monotone-Revision: 3689d2de8a620c993111cc0c18bc4ad918988b09

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2009-06-01T20:03:00

--- a/build.xml
+++ b/build.xml
@@ -278,7 +278,7 @@
             <fileset dir="installer/lib/wrapper/win32/" />
         </copy>
         <copy file="hosts.txt" todir="pkg-temp/" />
-        <copy file="install-headless.txt" todir="pkg-temp/" />
+        <copy file="INSTALL-headless.txt" todir="pkg-temp/" />
         <copy file="history.txt" todir="pkg-temp/" />
         <mkdir dir="pkg-temp/scripts" />
         <copy file="apps/proxyscript/i2pProxy.pac" todir="pkg-temp/scripts/" />
